fix: fix the layout overlap when narrowing the width

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,10 @@ body{
   text-align: center;
   color:black;
   background-color: white;
-  min-width: 700px;
+  min-width: 1000px;
 }
 #root {
   width: 100%;
+  min-width: 1000px;
   height:100%;
 }
